# python-gazebo

./: .gitignore  .gitmodules  README.md  build_gazebo.sh  environment.yml  installArdupilot18.md  installArdupilot20.md  installPythonGazebo.md  setup.sh
env/: APDemo.ipynb  Demo.ipynb  GazeboPublisher.py  README.md  controller.py  demo.py  gazebo_comms.py  gym_env.py  motor.py  sim.py  simOcto.parm  trajectories.py
env/Controllers/: Actuation.py  AttitudeController.py  GazeboPublisher.py  GenerateTrajectories.py  Octocopter.py  PositionController.py  motor.py  octorotor_base_env.py
env/Controllers/proto/: vector8d_pb2.py
env/msgs/: README.md
env/multirotor/: visualize.py
env/paths/: fault.xlsx  fixed.xlsx  flight_data.xlsx
gazebo/plugins/: CMakeLists.txt  S1000_motor_model.cc  build.sh  tarot_env_plugin.cc  tarot_motor_model.cc  tarot_motor_model_old.cc
gazebo/worlds/: demo.world  sim_env.world  sim_old.world  sim_tarot.world
models/DJI-S1000/: model.config  model.sdf
models/box/: model.config  model.sdf
models/octocopter/: octocopter.sdf
models/tarot_package/: model.sdf
models/tarot_t18/meshes/: propeller_CW_18x6.stl
plugins/: CMakeLists.txt  build.sh  gym_model.cc  gym_world.cc  octorotor_env_plugin.cc  tarot_motor_model.cc
plugins/msgs/: CMakeLists.txt  messages.proto
plugins/tarotPB/msgs/: CMakeLists.txt  vector8d.proto
twins/tarot_old/: model.config  model.sdf
twins/tarot_package/: model.config  model.sdf
twins/tarot_t18/: model.config  model.sdf
twins/tarot_t18/cad/: backup.sdf  tarot_frame.FCStd  tarot_frame_old.FCStd  tarot_frame_spider.FCStd
twins/tarot_t18/meshes/: propeller_CCW_18x6.stl
twins/tarot_t18/plugins/: CMakeLists.txt  build.sh  esc_plugin.cc  tarot_env_plugin.cc
worlds/: box.world  sim_S1000.world  test.world
